# nes-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh  index.html  multiplay.html  vr.html
cli/: Cargo.toml
cli/src/: main.rs  sdl2_audio.rs  sdl2_display.rs  sdl2_input.rs
roms/: Readme.md  Readme.txt
src/: apu.rs  audio.rs  button.rs  cpu.rs  default_audio.rs  default_display.rs  default_input.rs  display.rs  input.rs  joypad.rs  lib.rs  main.rs  mapper.rs  memory.rs  nes.rs  ppu.rs  register.rs  rom.rs  sdl2_audio.rs  sdl2_display.rs  sdl2_input.rs  wasm.rs  wasm_audio.rs  wasm_display.rs  wasm_input.rs
wasm/: Cargo.toml  build.sh  build_wasm.sh  nes_rust.js  nes_rust_bg.wasm
wasm/nodejs/: README.md  nes_rust_wasm.d.ts  nes_rust_wasm.js  nes_rust_wasm_bg.d.ts  nes_rust_wasm_bg.wasm  package.json
wasm/npm/: package.json
wasm/npm/nodejs/: nes_rust_wasm.d.ts  nes_rust_wasm.js  nes_rust_wasm_bg.wasm
wasm/npm/pkg/: nes_rust_wasm.js  nes_rust_wasm_bg.js  nes_rust_wasm_bg.wasm
wasm/src/: lib.rs  wasm_audio.rs  wasm_display.rs  wasm_input.rs
wasm/web/: README.md  index.html  multiplay.html  nes_rust_wasm.js  nes_rust_wasm_bg.wasm  vr.html
wasm/web/js/network/: FirebaseSignalingServer.js  WebRTCClient.js
